# Smoke-Detector-ESP-IDF

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/include/: ble_handler.h  buzzer.h  esp32-dht11.h  flame-detector.h  internet.h  internet.txt  led.h  mosfet.h  mq2.h  mqtt.h
main/modules/: ble_handler.c  buzzer.c  dht32-dht11.c  flame-detector.c  internet.c  internet.txt  led.c  mosfet.c  mq2.c  mqtt.c
